--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.4",
+    "base64url": "^3.0.1",
     "dayjs": "^1.10.7",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.1.0",
