--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.10.7",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.1.0",
+    "node-fetch": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
